<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16dp"
        android:background="@color/white"
        android:textColor="@color/blue"
        android:text="@string/favoris_alert"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/dialogButtonAnnuler"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/annuler"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/blue"
            android:layout_weight="1"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/dialogButtonValider"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/valider"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/blue"
            android:layout_weight="1"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>