<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/blue">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:background="@color/transparent_blue2">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/param_title"
            android:id="@+id/parametersTitle"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/closeButtonParam"
            android:gravity="center_vertical"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/parametersTitle"
            android:layout_alignEnd="@+id/parametersTitle"
            android:background="#00000000"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/parameter_text_padding"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.75"
            android:text="@string/param_timer_txt"
            android:textStyle="bold"
            android:id="@+id/realTimeDataParameterText"
            android:gravity="center"
            android:paddingLeft="@dimen/parameter_text_padding"
            android:paddingRight="@dimen/parameter_text_padding"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/param_text_size"/>
        <NumberPicker
            android:id="@+id/dataNP"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.25"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/parameter_text_padding"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.75"
            android:text="@string/param_switch_txt"
            android:textStyle="bold"
            android:id="@+id/realTimeDataText"
            android:gravity="center"
            android:paddingLeft="@dimen/parameter_text_padding"
            android:paddingRight="@dimen/parameter_text_padding"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/param_text_size"/>
        <Switch
            android:id="@+id/dataSwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:switchMinWidth="100dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/white"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/parameter_text_padding"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.75"
            android:text="@string/param_car_txt"
            android:textStyle="bold"
            android:id="@+id/carToggleText"
            android:gravity="center"
            android:paddingLeft="@dimen/parameter_text_padding"
            android:paddingRight="@dimen/parameter_text_padding"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/param_text_size"/>
        <Switch
            android:id="@+id/carSwitch"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.75"
            android:switchMinWidth="100dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/white"></LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"/>

</LinearLayout>