<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_details"
    android:padding="20dp">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajouter aux Favoris"
        android:id="@+id/favoriSelectButton"
        android:layout_gravity="center"
        android:src="@drawable/favori"
        android:background="@color/blue"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/non_dispo"
            android:id="@+id/name"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/places_label"
            android:id="@+id/placesLabel"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/non_dispo"
            android:id="@+id/placesNumber"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" / "
            android:id="@+id/slash"
            android:gravity="center"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/non_dispo"
            android:id="@+id/placesNumberTotal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hourly_label"
            android:id="@+id/hourly_label"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/non_dispo"
            android:id="@+id/hourly"
            android:gravity="center"
            android:textSize="20dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/driveMeB"
        android:text="Emmène-moi !"
        android:textColor="@color/blue"
        android:background="@color/white"
        android:layout_gravity="center"
        android:padding="30dp"/>

</LinearLayout>