<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:text="@string/app_name"
            android:id="@+id/titre"
            android:background="@color/blue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

        <WebView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@+id/titre"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <ImageButton
                android:id="@+id/btnPutCar"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:background="@drawable/car_button"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <ImageButton
                android:id="@+id/btnShowLocation"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_toRightOf="@+id/button1"
                android:layout_toEndOf="@+id/button1"
                android:background="@drawable/position_button"
                android:layout_gravity="center_vertical"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <ImageButton
                android:id="@+id/btnFavoris"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_toRightOf="@+id/button2"
                android:layout_toEndOf="@+id/button2"
                android:background="@drawable/star_button"
                android:layout_gravity="center_vertical"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <ImageButton
                android:id="@+id/btnParkings"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_toRightOf="@+id/button3"
                android:layout_toEndOf="@+id/button3"
                android:background="@drawable/parking_button"
                android:layout_gravity="center_vertical"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <ImageButton
                android:id="@+id/btnCenter"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_toRightOf="@+id/button4"
                android:layout_toEndOf="@+id/button4"
                android:background="@drawable/center_map"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/chevron_width"
            android:layout_height="@dimen/chevron_height"
            android:id="@+id/chevronGauche"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/transparent_blue"
            android:src="@drawable/ic_chevron_right_white_24dp"/>

        <ImageView
            android:layout_width="@dimen/chevron_width"
            android:layout_height="@dimen/chevron_height"
            android:id="@+id/chevronDroite"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent_blue"
            android:src="@drawable/ic_chevron_left_white_24dp"/>
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/title_height"
        android:layout_marginBottom="@dimen/button_height"
        android:choiceMode="singleChoice"
        android:divider="@color/transparent_white"
        android:dividerHeight="1dp"
        android:background="@color/transparent_blue2"
        android:textSize="@dimen/menu_items_text_size"
        android:groupIndicator="@null"/>

    <FrameLayout
        android:id="@+id/right_drawer"
        android:layout_width="240dp"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/title_height"
        android:layout_marginBottom="@dimen/button_height"
        android:choiceMode="none"
        android:divider="@color/transparent_white"
        android:dividerHeight="1dp"
        android:background="@color/transparent_blue2"
        android:textSize="@dimen/menu_items_text_size"
        android:groupIndicator="@null">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="@string/layers_header"
                android:textSize="@dimen/menu_title_text_size"
                android:textColor="@color/blue"
                android:background="@color/white"/>
            <ListView
                android:id="@+id/right_drawer_layers"
                android:layout_width="240dp"
                android:layout_height="0dp"
                android:choiceMode="singleChoice"
                android:divider="@color/transparent_white"
                android:dividerHeight="1dp"
                android:background="@color/transparent_blue2"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="@string/maps_header"
                android:textSize="@dimen/menu_title_text_size"
                android:textColor="@color/blue"
                android:background="@color/white"/>
            <ListView
                android:id="@+id/right_drawer_maps"
                android:layout_width="240dp"
                android:layout_height="0dp"
                android:choiceMode="singleChoice"
                android:divider="@color/transparent_white"
                android:dividerHeight="1dp"
                android:background="@color/transparent_blue2"
                android:layout_weight="1"/>
        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>
